src/towers/towers.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  width: 100vw;
  height: 100vh;
  font-family: 'Butcherman', cursive;
  overflow: hidden;
}

.container {
  height: 100vh;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 2fr 10fr;
}

.top-header {
  border: 1px solid red;
  width: 100%;
  grid-column: 1 / -1;
  grid-row: 1 / 2;
  display: flex;
  justify-content: center;
  align-items: center;
  background: #F2DC99;
}

.top-header h1 {
  font-size: 7em;
  color: #BF452A;
}

.box {
  display: grid;
  grid-template-columns: repeat(18, 1fr);
  grid-template-rows: repeat(16, 1fr);
  background: #7B8C7D;
}

.left-box {
  border: 1px solid blue;
  grid-column: 1 / 2;
  grid-row: 2 / 3;
}

.middle-box {
  border: 1px solid green;
  grid-column: 2 / 3;
  grid-row: 2 / 3;
}

.right-box {
  border: 1px solid gold;
  grid-column: 3 / 4;
  grid-row: 2 / 3;
}

.base {
  grid-column: 4 / -4;
  grid-row: 13 / 14;
  height: 40px;
  background: #D97925;
  border-radius: 5px;
  box-shadow: -4px 5px 7px rgba(191, 69, 42, 0.75);
}

.tower {
  width: 35px;
  grid-column: 9 / 11;
  grid-row: 6 / 13;
  z-index: 0;
  justify-self: center;
  background: #D97925;
  border-radius: 5px;
  box-shadow: -5px 0px 7px rgba(191, 69, 42, 0.75);
} 

.disc {
  z-index: 1;
  border-radius: 10px;
  box-shadow: -1px 3px 7px rgba(191, 69, 42, 0.75);
}

.large-disc {
  background: #BFAE78;
  grid-column: 5 / -5;
  grid-row: 12 / 13;
  height: 100%;
  align-self: end;
}

.medium-disc {
  background: #E6D091;
  grid-column: 7 / -7;
  grid-row: 11 / 12;
  height: 100%;
}

.small-disc {
  background: #FFE7A1;
  grid-column: 8 / -8;
  grid-row: 10 / 11;
  height: 100%
}

